@@ -5,7 +5,9 @@ import F12.newsfeedproject.api.board.dto.response.BoardResponseDto;
 import F12.newsfeedproject.api.board.dto.request.BoardUpdateRequestDto;
 import F12.newsfeedproject.domain.board.entity.Board;
 import F12.newsfeedproject.domain.board.service.BoardService;
+import F12.newsfeedproject.domain.user.entity.User;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,28 +20,29 @@ public class ApiBoardService {
 
   // 게시글 작성
   @Transactional
-  public BoardResponseDto saveBoard(BoardRequestDto requestDto, Long userId) {
-    Board savedBoard = boardService.saveBoard(requestDto.toEntity(userId));
+  public BoardResponseDto saveBoard(BoardRequestDto requestDto, User loginUser) {
+    Board savedBoard = boardService.saveBoard(requestDto.toEntity(loginUser));
     return BoardResponseDto.from(savedBoard);
   }
 
   // 게시글 단건 조회
   public BoardResponseDto getBoard(Long boardId) {
-    Board getBoard = boardService.findByBoardId(boardId);
+    Board getBoard = boardService.findByBoardIdWithUser(boardId);
     return BoardResponseDto.from(getBoard);
   }
 
   // 게시글 전체 목록 조회
   public List<BoardResponseDto> getBoards() {
-    List<Board> boardList = boardService.getBoards();
-    return boardList.stream().map(BoardResponseDto::from).toList();
+    List<Board> boards = boardService.getBoards();
+    return boards.stream().map(BoardResponseDto::from).collect(Collectors.toList());
   }
 
   // 게시글 수정
   @Transactional
   public BoardResponseDto updateBoard(Long boardId, BoardUpdateRequestDto requestDto) {
-    Board updateBoard = boardService.findByBoardId(boardId);
+    Board updateBoard = boardService.findByBoardIdWithUser(boardId);
     boardService.updateBoard(updateBoard, requestDto.toEntity());
+
     return BoardResponseDto.from(updateBoard);
   }
 
